--- a/package.json
+++ b/package.json
@@ -3,28 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/alert": "^2.2.2",
-    "@chakra-ui/card": "^2.2.0",
-    "@chakra-ui/checkbox": "^2.3.2",
-    "@chakra-ui/form-control": "^2.2.0",
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.19.1",
+    "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
-    "@reduxjs/toolkit": "^2.8.2",
-    "@tanstack/react-query": "^5.77.0",
+    "@emotion/styled": "^11.14.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5",
-    "axios": "^1.9.0",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
+    "@types/node": "^16.18.126",
+    "@types/react": "^18.3.22",
+    "@types/react-dom": "^18.3.7",
+    "framer-motion": "^12.14.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -52,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/node": "^22.15.21"
   }
 }
